# toolbox

./: .gitignore  README.md  budgets.yaml  profile.yaml  pyproject.toml
agents/: claude-code.yaml  codex.yaml  hermes.yaml  opencode.yaml  shell.yaml
connectors/: filesystem.yaml  github.yaml  google-drive.yaml
docs/adr/: 0001-stack.md  0002-memory-layer.md  0003-inbox-connectors.md  0004-reflection-ask-voice.md  0005-standards-budgets.md
src/mission_control/: __init__.py  ask.py  budgets.py  cli.py  config.py  connectors.py  db.py  events.py  models.py  reflection.py  registry.py  runner.py  standards.py  voice.py
src/mission_control/inbox/: __init__.py  capture.py  triage.py
src/mission_control/memory/: __init__.py  context.py  moc.py  notes.py  vault.py
src/mission_control/server/: app.py
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/artifacts/: page.tsx
web/app/ask/: page.tsx
web/app/budgets/: page.tsx
web/app/connectors/: page.tsx
web/app/inbox/: page.tsx
web/app/journal/: page.tsx
web/app/memory/: page.tsx
web/app/room/: page.tsx
web/app/runs/: page.tsx
web/app/runs/[id]/: page.tsx
web/app/standards/: page.tsx
web/components/: agent-card.tsx  live-feed.tsx  model-select.tsx  new-agent-form.tsx  new-run-form.tsx  runs-table.tsx  status-badge.tsx
web/components/ui/: badge.tsx  card.tsx
web/lib/: api.ts  labels.ts  types.ts
