[project]
name = "mission-control"
version = "0.1.0"
description = "Agentic OS — τοπικό κέντρο ελέγχου AI πρακτόρων"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
]

[project.scripts]
mission-control = "mission_control.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mission_control"]
